--- a/gallery.html
+++ b/gallery.html
@@ -193,7 +193,7 @@
         <div class="col-md-7 col-lg-8">
           <p class="text-center text-md-left">© 2019 Copyright:
             <a href="https://mdbootstrap.com/education/bootstrap/">
-              <strong> St.Rok Studio</strong>
+              <strong> Placeholder</strong>
             </a>
           </p>
         </div>
