--- a/rates.html
+++ b/rates.html
@@ -187,7 +187,7 @@
           <!--Copyright-->
           <p class="text-center text-md-left">© 2019 Copyright:
             <a href="https://mdbootstrap.com/education/bootstrap/">
-              <strong> St.Rok Studio</strong>
+              <strong> Placeholder Text</strong>
             </a>
           </p>
         </div>
